# modme-ui-01

./: .cursorignore  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlensignore  .gitmodules  .ignore  .lean-ctx.toml  .lean-ctx.toml.example  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .prettierrc.json  .worktree-ports.env  ADR.md  AGENTS.md  AGENT_COLLECTION_IMPLEMENTATION_SUMMARY.md  AGENT_CREATION_IMPLEMENTATION_GUIDE.md  AGENT_LIBRARY_QUICK_REF.md  AGENT_SKILLS_IMPLEMENTATION.md  BOOTSTRAP_GUIDE.md  BUILD_TOOLS_SETUP.md  CHANGELOG.md  CLAUDE.md  CLEANUP_CHECKLIST.md  CODEBASE_INDEX.md  CODEQL_README.md  CODESPACES_URLS.md  COMPONENT_MANIFEST.json  CONTRIBUTING.md  CONVERSION_SUMMARY_GENERATE_SCHEMAS.md  DEVCONTAINER_IMPLEMENTATION_SUMMARY.md  DEVCONTAINER_PREFLIGHT.md  DEVCONTAINER_READINESS_CHECKLIST.md  DEVCONTAINER_SETUP.md  DEVCONTAINER_TESTING_GUIDE.md  DEVCONTAINER_TRANSITION_SUMMARY.md  (+91 more)
GenerativeUI_monorepo/apps/agent-server/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
GenerativeUI_monorepo/scrape-pipeline/: README.md  handover-2026-06-27.md  pyproject.toml  scrapy.cfg
GenerativeUI_monorepo/scrape-pipeline/scrape-jobs/: docs-sitemap.collection.yml  lean-ctx-shopping-list.annotations.json  lean-ctx-shopping-list.collection.yml  scrape-job.schema.json
GenerativeUI_monorepo/scrape-pipeline/scrape_pipeline/: __init__.py  __main__.py  items.py  settings.py
agent/: .env.example  INTEGRATION_EXAMPLE.py  JOURNAL_MCP_README.md  README.md  fastmcp_server.py  health.py  journal_mcp_server.py  llm_providers.py  main.py  mcp_server.py  mcp_vtcode.py  permissions.py  pyproject.toml  recipes.py  requirements-phoenix.txt  sse_handler.py  toolset-alias-schema.json  toolset-schema.json  toolset_aliases.json  toolset_manager.py  toolsets.json
agent/evaluations/: README.md  requirements.txt  run_evaluation.py  run_evaluation_deepeval.py
agent/genai-toolbox/: CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  MCP-TOOLBOX-EXTENSION.md  PHOENIX_INTEGRATION.md  QUICKSTART.md  README-GREPTIME.md  README.md  go.mod  go.sum  setup-genai-toolbox.ps1  tools.yaml
agent/genai-toolbox/docs/: AGENTS.md-template.md  ALLOYDBADMIN_README.md  ALLOYDBPG_README.md  BIGQUERY_README.md  CLOUDSQLMSSQLADMIN_README.md  CLOUDSQLMSSQL_README.md  CLOUDSQLPG_README.md  (+7 more)
agent/instrumentation_examples/: copilot_tracing_demo.py  phoenix_tracing_setup.py
agent/message_ingestion/: __init__.py  detection.py  examples.py  ingestion.py  parsers.py  types.py
agent/modme_ui_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent/observability/: README.md  __init__.py  conversation_ingestion.py  copilot_chat_parser.py  copilot_phoenix_proxy.py  copilot_phoenix_proxy_refactor.py  custom_provider_tracer.py  example_phoenix.py  export_copilot_dataset.py  greptime_config.py  greptime_logger.py  models.py  n8n_workflow_chat_to_phoenix.json  n8n_workflow_universal_ingestion.json  phoenix_config.py  phoenix_instrumentors.py  process_chat_json.py  provider_adapters.py  schemas.sql  trace_bridge_api.py  upload_chat_spans.py  upload_chat_to_phoenix.py  upload_chat_traces.py  vscode_copilot_telemetry.py
agent/private-journal-mcp/: CLAUDE.md  README.md  package.json
agent/recipes/: data-analysis.json  report-generation.json
agent/routes/: README.md  __init__.py  definitions.py  router.py
agent/skills_ref/: GITLENS_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FIX_README.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SKILL_LIBRARY_IMPLEMENTATION_SUMMARY.md  SKILL_LIBRARY_INTEGRATION.md  __init__.py  cli.py  embeddings.py  embeddings_gemma3n.py  installed_skills_prompt.xml  journal.py  journal_cli.py  journal_cli_standalone.py  parser.py  prompt.py  skill_creator.py  skill_library_cli.py  skill_library_manager.py  validator.py
agent/smallest-agent/: HACKING-TRANSCRIPT.md  README.md
agent/test_output/: agent_prompt.md
agent/tests/: __init__.py  test_integration_mcp_collection.py  test_openapi_spec.py  test_semantic_router.py
agent/tools/: ANALYSIS_REPORT.md  README.md  __init__.py  agent_library_generator.py  code_tools.py  collection_generator.py  collection_manager.py  generate_schemas.py  ingestion_tool.py  journal_adapter.py  skills_ref_tools.py  test_generate_schemas.py
(+1759 files in other folders)
