[project]
name = "modme-ui-agent"
version = "0.3.1"
description = "ModifyMe GenUI Workbench Agent with FastMCP, Multi-Model, and Advanced Features"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic>=2.0.0",
    "google-adk",
    "google-genai",
    "ag-ui-adk",
    "httpx>=0.27.0",
    "semantic-router>=0.1.0",
    # MCP integration (FastMCP for modern, Pythonic MCP development)
    "fastmcp[tasks]>=3.0.0b1",
    "mcp>=0.9.0",
    # Multi-model LLM support (from Goose patterns)
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    # Permission & auth (from OpenWork patterns)
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
local = [
    "semantic-router[local]",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

# Configure setuptools package discovery to handle flat-layout packages
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

