[tool.poetry]
name = "agent-server"
version = "0.1.0"
description = "FastAPI + AG2 (AutoGen) agent server for Generative UI"
authors = ["Generative UI Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
websockets = "^12.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.ag2]
optional = true

[tool.poetry.group.ag2.dependencies]
ag2 = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
